--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: go
 
+os:
+  - linux
+  - osx
+
 go:
-    - 1.2
+    - 1.5.x
+    - 1.6.x
+    - 1.7.x
+    - 1.8.x
 
 install:
-    - 'go install github.com/onsi/ginkgo/ginkgo'
-script: 'ginkgo -r'
+    - go get github.com/scalingdata/ginkgo
+    - go get github.com/scalingdata/gomega
